kubernetes/doc-home-cluster/apps/downloads/autobrr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autobrr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: autobrr
  egress:
    # qbittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
